--- a/package.json
+++ b/package.json
@@ -6,18 +6,26 @@
     "extends": "@trevorblades/eslint-config/react"
   },
   "dependencies": {
+    "@chakra-ui/gatsby-plugin": "^2.0.1",
+    "@chakra-ui/react": "^1.6.10",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "framer-motion": "^4.1.17",
     "gatsby": "^3.14.3",
     "gatsby-plugin-mdx": "^2.14.0",
     "gatsby-plugin-react-helmet": "^4.14.0",
+    "gatsby-remark-copy-linked-files": "^4.11.0",
     "gatsby-source-filesystem": "^3.14.0",
     "gatsby-source-git": "^1.1.0",
     "gatsby-transformer-remark": "^4.11.0",
+    "path-browserify": "^1.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.3.1",
     "rehype-react": "^7.0.3"
   },
   "devDependencies": {
