--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "start": "gatsby develop"
   },
   "eslintConfig": {
-    "extends": "@trevorblades/eslint-config/react"
+    "extends": [
+      "@trevorblades/eslint-config/react",
+      "plugin:mdx/recommended"
+    ]
   },
   "dependencies": {
     "@chakra-ui/gatsby-plugin": "^2.0.1",
@@ -12,16 +15,20 @@
     "@emotion/styled": "^11.3.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "fenceparser": "^1.1.1",
     "framer-motion": "^4.1.17",
     "gatsby": "^3.14.3",
     "gatsby-plugin-mdx": "^2.14.0",
     "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-remark-copy-linked-files": "^4.11.0",
+    "gatsby-remark-mermaid": "^2.1.0",
     "gatsby-source-filesystem": "^3.14.0",
     "gatsby-source-git": "^1.1.0",
     "gatsby-transformer-remark": "^4.11.0",
     "path-browserify": "^1.0.1",
+    "prism-react-renderer": "^1.2.1",
     "prop-types": "^15.7.2",
+    "puppeteer": "^10.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
@@ -30,6 +37,7 @@
   },
   "devDependencies": {
     "@trevorblades/eslint-config": "^7.2.5",
-    "eslint": "^7.32.0"
+    "eslint": "^7.32.0",
+    "eslint-plugin-mdx": "^1.11.1"
   }
 }
