--- a/package.json
+++ b/package.json
@@ -9,22 +9,26 @@
     ]
   },
   "dependencies": {
+    "@apollo/space-kit": "8.11.0",
     "@chakra-ui/gatsby-plugin": "^2.0.1",
     "@chakra-ui/react": "^1.6.10",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@svgr/webpack": "^5.5.0",
     "fenceparser": "^1.1.1",
     "framer-motion": "^4.1.17",
     "gatsby": "^3.14.3",
     "gatsby-plugin-mdx": "^2.14.0",
     "gatsby-plugin-react-helmet": "^4.14.0",
+    "gatsby-plugin-svgr": "^3.0.0-beta.0",
     "gatsby-remark-copy-linked-files": "^4.11.0",
     "gatsby-remark-mermaid": "^2.1.0",
     "gatsby-source-filesystem": "^3.14.0",
     "gatsby-source-git": "^1.1.0",
     "gatsby-transformer-remark": "^4.11.0",
+    "parse-numeric-range": "^1.3.0",
     "path-browserify": "^1.0.1",
     "prism-react-renderer": "^1.2.1",
     "prop-types": "^15.7.2",
