--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     ]
   },
   "dependencies": {
+    "@apollo/chakra-helpers": "file:packages/chakra-helpers",
     "@apollo/space-kit": "8.11.0",
     "@chakra-ui/gatsby-plugin": "^2.0.1",
     "@chakra-ui/react": "^1.6.10",
@@ -23,6 +24,7 @@
     "gatsby-plugin-mdx": "^2.14.0",
     "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-plugin-svgr": "^3.0.0-beta.0",
+    "gatsby-plugin-webfonts": "^2.1.1",
     "gatsby-remark-copy-linked-files": "^4.11.0",
     "gatsby-remark-mermaid": "^2.1.0",
     "gatsby-source-filesystem": "^3.14.0",
