--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gatsby-remark-mermaid": "^2.1.0",
     "gatsby-source-filesystem": "^3.14.0",
     "gatsby-source-git": "^1.1.0",
+    "gatsby-transformer-json": "^3.14.0",
     "gatsby-transformer-remark": "^4.11.0",
     "parse-numeric-range": "^1.3.0",
     "path-browserify": "^1.0.1",
