--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "scripts": {
-    "start": "gatsby develop"
+    "start": "gatsby develop",
+    "dev:client": "DOCS_DEV_PATH=../apollo-client/docs npm start",
+    "dev:server": "DOCS_DEV_PATH=../apollo-server/docs npm start"
   },
   "eslintConfig": {
     "extends": [
