--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-plugin-svgr": "^3.0.0-beta.0",
     "gatsby-plugin-webfonts": "^2.1.1",
+    "gatsby-remark-autolink-headers": "^5.0.0",
     "gatsby-remark-copy-linked-files": "^4.11.0",
     "gatsby-remark-mermaid": "^2.1.0",
     "gatsby-source-filesystem": "^3.14.0",
     "gatsby-source-git": "^1.1.0",
     "gatsby-transformer-json": "^3.14.0",
     "gatsby-transformer-remark": "^4.11.0",
+    "github-slugger": "^1.4.0",
     "parse-numeric-range": "^1.3.0",
     "path-browserify": "^1.0.1",
     "prism-react-renderer": "^1.2.1",
