--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -1,10 +1,15 @@
-name: Publish on Netlify
+name: Preview on Netlify
 
-on:
+on: 
   workflow_call:
+    secrets:
+      NETLIFY_SITE_ID:
+        required: true
+      NETLIFY_AUTH_TOKEN:
+        required: true
       
 jobs:
-  publish:
+  preview:
     runs-on: ubuntu-latest
 
     env:
