--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "scripts": {
     "start": "gatsby develop",
     "build": "gatsby build",
-    "dev:client": "DOCS_DEV_PATH=../apollo-client/docs npm start",
-    "dev:server": "DOCS_DEV_PATH=../apollo-server/docs npm start"
+    "dev:client": "DOCS_PATH=../apollo-client/docs npm start",
+    "dev:server": "DOCS_PATH=../apollo-server/docs npm start"
   },
   "eslintConfig": {
     "extends": [
