--- a/packages/chakra-helpers/package.json
+++ b/packages/chakra-helpers/package.json
@@ -7,6 +7,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "eslintConfig": {
+    "extends": "@trevorblades/eslint-config/typescript"
+  },
   "scripts": {
     "start": "tsc --watch",
     "build": "tsc",
