--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: netlify/actions/cli@master
         with:
-          args: deploy --trigger --prod --message "${{ github.event.head_commit.message }}"
+          args: deploy --trigger --prod --message='${{ github.event.head_commit.message }}'
         env:
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
