--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,9 +11,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: netlify/actions/cli@master
-        with:
-          args: deploy --trigger --prod --message='${{ github.event.head_commit.message }}'
+      - uses: actions/setup-node@v2
+          with:
+            node-version: 14
+
+      - name: Trigger deploy
+        run: npx netlify deploy --trigger --prod --message "${{ github.event.head_commit.message }}"
         env:
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
