Console log context

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -51,6 +51,7 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
+            console.log(context)
             await github.repos.createCommitStatus({
               ...context.repo,
               sha: context.sha,
