--- a/packages/chakra-helpers/package.json
+++ b/packages/chakra-helpers/package.json
@@ -18,6 +18,7 @@
   "scripts": {
     "start": "tsc --watch",
     "build": "tsc",
+    "bootstrap": "npm i && npm run build",
     "prepublishOnly": "npm run build"
   },
   "author": "Trevor Blades <tdblades@gmail.com>",
