Use single prepare script

--- a/packages/chakra-helpers/package.json
+++ b/packages/chakra-helpers/package.json
@@ -16,9 +16,7 @@
   },
   "scripts": {
     "start": "tsc --watch",
-    "build": "tsc",
-    "bootstrap": "npm i && npm run build",
-    "prepublishOnly": "npm run build"
+    "prepare": "tsc"
   },
   "author": "Trevor Blades <tdblades@gmail.com>",
   "license": "MIT",
