--- a/packages/chakra-helpers/package.json
+++ b/packages/chakra-helpers/package.json
@@ -31,5 +31,6 @@
   "peerDependencies": {
     "@apollo/space-kit": "8 - 8.11.0",
     "@chakra-ui/react": "^1.6.0"
-  }
+  },
+  "gitHead": "ac91ab6925a0bbb18933c445b99a18c417e8a37e"
 }
