--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,5 @@
 on: 
   workflow_call:
-    inputs:
-      message:
-        required: true
-        type: string
     secrets:
       NETLIFY_SITE_ID:
         required: true
@@ -22,7 +18,7 @@ jobs:
           node-version: 14
 
       - name: Trigger deploy
-        run: npx netlify deploy --trigger --prod --message "${{ inputs.message }}"
+        run: npx netlify deploy --trigger --prod --message "${{ github.event.head_commit.message }}"
         env:
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
