--- a/package.json
+++ b/package.json
@@ -6,12 +6,6 @@
     "dev:client": "DOCS_PATH=../apollo-client/docs npm start",
     "dev:server": "DOCS_PATH=../apollo-server/docs npm start"
   },
-  "eslintConfig": {
-    "extends": [
-      "@trevorblades/eslint-config/react",
-      "plugin:mdx/recommended"
-    ]
-  },
   "dependencies": {
     "@apollo/chakra-helpers": "^1.0.1",
     "@apollo/space-kit": "8.11.0",
@@ -25,8 +19,10 @@
     "fenceparser": "^1.1.1",
     "framer-motion": "^4.1.17",
     "gatsby": "^3.14.3",
+    "gatsby-plugin-google-gtag": "^4.3.0",
+    "gatsby-plugin-google-tagmanager": "^4.3.0",
     "gatsby-plugin-mdx": "^2.14.0",
-    "gatsby-plugin-react-helmet": "^4.14.0",
+    "gatsby-plugin-next-seo": "^1.9.0",
     "gatsby-plugin-svgr": "^3.0.0-beta.0",
     "gatsby-plugin-webfonts": "^2.1.1",
     "gatsby-remark-autolink-headers": "^4.11.0",
@@ -44,9 +40,10 @@
     "puppeteer": "^10.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.2.1",
     "react-icons": "^4.3.1",
-    "rehype-react": "^7.0.3"
+    "rehype-react": "^7.0.3",
+    "remark-typescript": "^0.4.0"
   },
   "devDependencies": {
     "@trevorblades/eslint-config": "^7.2.7",
