--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.3.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@rehooks/local-storage": "^2.4.0",
     "@svgr/webpack": "^5.5.0",
     "fenceparser": "^1.1.1",
     "framer-motion": "^4.1.17",
