--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.2.1",
     "react-icons": "^4.3.1",
+    "rehype": "^12.0.0",
+    "rehype-autolink-headings": "^5.1.0",
     "rehype-react": "^7.0.3",
     "remark-typescript": "^0.4.0"
   },
