--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "gatsby": "^3.14.3",
     "gatsby-plugin-google-gtag": "^4.3.0",
     "gatsby-plugin-google-tagmanager": "^4.3.0",
+    "gatsby-plugin-manifest": "^4.3.0",
     "gatsby-plugin-mdx": "^2.14.0",
     "gatsby-plugin-next-seo": "^1.9.0",
+    "gatsby-plugin-offline": "^5.3.0",
     "gatsby-plugin-svgr": "^3.0.0-beta.0",
     "gatsby-plugin-webfonts": "^2.1.1",
     "gatsby-remark-autolink-headers": "^4.11.0",
