Add algolia indexing and sitemap

--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
     "@mdx-js/react": "^1.6.22",
     "@rehooks/local-storage": "^2.4.0",
     "@svgr/webpack": "^5.5.0",
+    "apollo-algolia-transform": "^1.0.38",
     "fenceparser": "^1.1.1",
     "framer-motion": "^4.1.17",
     "gatsby": "^3.14.3",
+    "gatsby-plugin-algolia": "^0.24.0",
     "gatsby-plugin-google-gtag": "^4.3.0",
     "gatsby-plugin-google-tagmanager": "^4.3.0",
     "gatsby-plugin-manifest": "^4.3.0",
     "gatsby-plugin-mdx": "^2.14.0",
     "gatsby-plugin-next-seo": "^1.9.0",
     "gatsby-plugin-offline": "^5.3.0",
+    "gatsby-plugin-sitemap": "^5.3.0",
     "gatsby-plugin-svgr": "^3.0.0-beta.0",
     "gatsby-plugin-webfonts": "^2.1.1",
     "gatsby-remark-autolink-headers": "^4.11.0",
