--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "start": "gatsby develop",
     "build": "gatsby build",
+    "test": "jest",
     "dev:client": "DOCS_PATH=../apollo-client/docs npm start",
     "dev:server": "DOCS_PATH=../apollo-server/docs npm start"
   },
@@ -57,6 +58,7 @@
     "@trevorblades/eslint-config": "^7.2.7",
     "eslint": "^7.32.0",
     "eslint-plugin-mdx": "^1.11.1",
+    "jest": "^27.4.5",
     "lerna": "^4.0.0"
   }
 }
