--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
   "dependencies": {
     "@apollo/chakra-helpers": "^1.0.1",
     "@apollo/space-kit": "8.11.0",
-    "@chakra-ui/gatsby-plugin": "^2.0.1",
+    "@chakra-ui/gatsby-plugin": "^2.0.2",
     "@chakra-ui/react": "^1.6.10",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "@rehooks/local-storage": "^2.4.3",
     "@svgr/webpack": "^5.5.0",
+    "@theowenyoung/gatsby-source-git": "^2.3.1",
     "apollo-algolia-transform": "^1.0.38",
     "fenceparser": "^1.1.1",
     "framer-motion": "^4.1.17",
-    "gatsby": "^3.14.3",
+    "gatsby": "^4.4.0",
     "gatsby-plugin-algolia": "^0.24.0",
     "gatsby-plugin-google-gtag": "^4.3.0",
     "gatsby-plugin-google-tagmanager": "^4.3.0",
@@ -31,14 +31,13 @@
     "gatsby-plugin-offline": "^5.3.0",
     "gatsby-plugin-sitemap": "^5.3.0",
     "gatsby-plugin-svgr": "^3.0.0-beta.0",
-    "gatsby-plugin-webfonts": "^2.1.1",
-    "gatsby-remark-autolink-headers": "^4.11.0",
-    "gatsby-remark-copy-linked-files": "^4.11.0",
+    "gatsby-plugin-webfonts": "^2.2.1",
+    "gatsby-remark-autolink-headers": "^5.4.0",
+    "gatsby-remark-copy-linked-files": "^5.4.0",
     "gatsby-remark-mermaid": "^2.1.0",
-    "gatsby-source-filesystem": "^3.14.0",
-    "gatsby-source-git": "^1.1.0",
-    "gatsby-transformer-json": "^3.14.0",
-    "gatsby-transformer-remark": "^4.11.0",
+    "gatsby-source-filesystem": "^4.4.0",
+    "gatsby-transformer-json": "^4.4.0",
+    "gatsby-transformer-remark": "^5.4.0",
     "github-slugger": "^1.4.0",
     "parse-numeric-range": "^1.3.0",
     "path-browserify": "^1.0.1",
@@ -52,7 +51,8 @@
     "rehype": "^12.0.0",
     "rehype-autolink-headings": "^5.1.0",
     "rehype-react": "^7.0.3",
-    "remark-typescript": "^0.4.0"
+    "remark-typescript": "^0.4.0",
+    "rooks": "^5.8.0"
   },
   "devDependencies": {
     "@trevorblades/eslint-config": "^7.2.7",
@@ -60,5 +60,9 @@
     "eslint-plugin-mdx": "^1.11.1",
     "jest": "^27.4.5",
     "lerna": "^4.0.0"
+  },
+  "volta": {
+    "node": "16.13.1",
+    "npm": "8.3.0"
   }
 }
