--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.3.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@rehooks/local-storage": "^2.4.4",
     "@svgr/webpack": "^5.5.0",
     "@theowenyoung/gatsby-source-git": "^2.3.1",
     "apollo-algolia-transform": "^1.0.38",
@@ -51,8 +52,7 @@
     "rehype": "^12.0.0",
     "rehype-autolink-headings": "^5.1.0",
     "rehype-react": "^7.0.3",
-    "remark-typescript": "^0.4.0",
-    "rooks": "^5.8.0"
+    "remark-typescript": "^0.4.0"
   },
   "devDependencies": {
     "@trevorblades/eslint-config": "^7.2.7",
