--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gatsby-transformer-json": "^4.4.0",
     "gatsby-transformer-remark": "^5.4.0",
     "github-slugger": "^1.4.0",
+    "lodash": "^4.17.21",
     "parse-numeric-range": "^1.3.0",
     "path-browserify": "^1.0.1",
     "prism-react-renderer": "^1.2.1",
@@ -52,6 +53,8 @@
     "rehype": "^12.0.0",
     "rehype-autolink-headings": "^5.1.0",
     "rehype-react": "^7.0.3",
+    "remark": "^14.0.2",
+    "remark-react": "^9.0.1",
     "remark-typescript": "^0.4.0"
   },
   "devDependencies": {
