--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gatsby-transformer-json": "^4.4.0",
     "gatsby-transformer-remark": "^5.4.0",
     "github-slugger": "^1.4.0",
+    "interweave": "^12.9.0",
     "lodash": "^4.17.21",
     "parse-numeric-range": "^1.3.0",
     "path-browserify": "^1.0.1",
