--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@emotion/styled": "^11.3.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "@rehooks/local-storage": "^2.4.4",
     "@svgr/webpack": "^5.5.0",
     "@theowenyoung/gatsby-source-git": "^2.3.1",
     "algoliasearch": "^4.12.1",
@@ -56,6 +55,7 @@
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.2.1",
     "react-icons": "^4.3.1",
+    "react-use": "^17.3.2",
     "rehype": "^12.0.0",
     "rehype-autolink-headings": "^5.1.0",
     "rehype-react": "^7.0.3",
