--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   ],
   "dependencies": {
     "@algolia/autocomplete-core": "^1.5.2",
+    "@algolia/autocomplete-plugin-algolia-insights": "^1.5.2",
     "@algolia/autocomplete-preset-algolia": "^1.5.2",
     "@apollo/chakra-helpers": "file:packages/chakra-helpers",
     "@apollo/space-kit": "8.11.0",
@@ -47,6 +48,7 @@
     "gatsby-transformer-json": "^4.4.0",
     "gatsby-transformer-remark": "^5.4.0",
     "github-slugger": "^1.4.0",
+    "https-browserify": "^1.0.0",
     "interweave": "^12.9.0",
     "lodash": "^4.17.21",
     "parse-numeric-range": "^1.3.0",
@@ -64,7 +66,9 @@
     "rehype-react": "^7.0.3",
     "remark": "^14.0.2",
     "remark-react": "^9.0.1",
-    "remark-typescript": "^0.4.0"
+    "remark-typescript": "^0.4.0",
+    "search-insights": "^1.8.0",
+    "stream-http": "^3.2.0"
   },
   "devDependencies": {
     "@trevorblades/eslint-config": "^7.2.7",
