--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "https-browserify": "^1.0.0",
     "interweave": "^12.9.0",
     "lodash": "^4.17.21",
+    "mdx-embed": "^0.0.23",
     "parse-numeric-range": "^1.3.0",
     "path-browserify": "^1.0.1",
     "prism-react-renderer": "^1.2.1",
