--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "apollo-algolia-transform": "^1.0.38",
     "fenceparser": "^1.1.1",
     "framer-motion": "^4.1.17",
-    "gatsby": "^4.4.0",
+    "gatsby": "^4.6.1",
     "gatsby-plugin-algolia": "^0.24.0",
     "gatsby-plugin-env-variables": "^2.2.0",
     "gatsby-plugin-google-gtag": "^4.3.0",
@@ -61,6 +61,7 @@
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.2.1",
     "react-icons": "^4.3.1",
+    "react-markdown": "^8.0.0",
     "react-use": "^17.3.2",
     "rehype": "^12.0.0",
     "rehype-autolink-headings": "^5.1.0",
