--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "github-slugger": "^1.4.0",
     "https-browserify": "^1.0.0",
     "interweave": "^12.9.0",
+    "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "mdx-embed": "^0.0.23",
     "parse-numeric-range": "^1.3.0",
