--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "mdx-embed": "^0.0.23",
     "parse-numeric-range": "^1.3.0",
     "path-browserify": "^1.0.1",
+    "polished": "^4.1.4",
     "prism-react-renderer": "^1.2.1",
     "prismjs": "^1.26.0",
     "prop-types": "^15.7.2",
