--- a/src/content/studio/config.json
+++ b/src/content/studio/config.json
@@ -1,5 +1,6 @@
 {
   "title": "Apollo Studio",
+  "subtitle": "Studio",
   "sidebar": {
     "Features": "/",
     "Get started": "/getting-started",
