--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "gatsby-remark-autolink-headers": "^5.4.0",
     "gatsby-remark-copy-linked-files": "^5.4.0",
     "gatsby-remark-mermaid": "^2.1.0",
-    "gatsby-remark-rewrite-relative-links": "^1.0.8",
     "gatsby-source-filesystem": "^4.4.0",
     "gatsby-transformer-json": "^4.4.0",
     "gatsby-transformer-remark": "^5.4.0",
@@ -56,6 +55,7 @@
     "interweave": "^12.9.0",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
+    "mdast-util-from-markdown": "^0.8.5",
     "mdx-embed": "^0.0.23",
     "parse-numeric-range": "^1.3.0",
     "path-browserify": "^1.0.1",
@@ -78,7 +78,8 @@
     "remark-typescript": "^0.4.0",
     "search-insights": "^1.8.0",
     "stream-http": "^3.2.0",
-    "subscriptions-transport-ws": "^0.11.0"
+    "subscriptions-transport-ws": "^0.11.0",
+    "unist-util-visit": "^2.0.3"
   },
   "devDependencies": {
     "@trevorblades/eslint-config": "^7.2.7",
