--- a/package.json
+++ b/package.json
@@ -78,7 +78,8 @@
     "remark-typescript": "^0.4.0",
     "search-insights": "^1.8.0",
     "stream-http": "^3.2.0",
-    "unist-util-visit": "^2.0.3"
+    "unist-util-visit": "^2.0.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@trevorblades/eslint-config": "^7.2.7",
