--- a/netlify.toml
+++ b/netlify.toml
@@ -2,5 +2,8 @@
   command = "gatsby develop"
   autoLaunch = false
   port = 3000
+[build.environment]
+  API_URL = "https://graphql-staging.api.apollographql.com"
 [context.production.environment]
+  API_URL = "https://graphql.api.apollographql.com"
   PREFIX_PATHS = "true"
