--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@algolia/autocomplete-plugin-algolia-insights": "^1.5.2",
     "@algolia/autocomplete-preset-algolia": "^1.5.2",
     "@apollo/chakra-helpers": "file:packages/chakra-helpers",
+    "@apollo/client": "^3.5.10",
     "@apollo/space-kit": "8.11.0",
     "@chakra-ui/gatsby-plugin": "^2.0.3",
     "@chakra-ui/react": "^1.8.3",
@@ -36,6 +37,7 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@react-icons/all-files": "^4.1.0",
+    "@mpth/react-no-ssr": "^1.0.1",
     "@svgr/webpack": "^5.5.0",
     "@theowenyoung/gatsby-source-git": "^2.3.1",
     "airtable": "^0.11.2",
@@ -44,6 +46,7 @@
     "framer-motion": "^4.1.17",
     "gatsby": "^4.6.1",
     "gatsby-plugin-algolia": "^0.24.0",
+    "gatsby-plugin-apollo": "^4.0.2",
     "gatsby-plugin-env-variables": "^2.2.0",
     "gatsby-plugin-google-gtag": "^4.3.0",
     "gatsby-plugin-google-tagmanager": "^4.3.0",
@@ -62,6 +65,7 @@
     "gatsby-transformer-json": "^4.4.0",
     "gatsby-transformer-remark": "^5.4.0",
     "github-slugger": "^1.4.0",
+    "graphql": "^15.8.0",
     "https-browserify": "^1.0.0",
     "interweave": "^12.9.0",
     "js-yaml": "^4.1.0",
