--- a/sources/remote.yml
+++ b/sources/remote.yml
@@ -1,37 +1,37 @@
 # mapping of remote source paths to their git repo and branch name
 react: 
-  remote: https://github.com/trevorblades/apollo-client
-  branch: tb/experimental-docs
+  remote: https://github.com/apollographql/apollo-client
+  branch: main
 react/v2: 
-  remote: https://github.com/trevorblades/apollo-client
-  branch: tb/experimental-v2
+  remote: https://github.com/apollographql/apollo-client
+  branch: version-2.6
 apollo-server: 
-  remote: https://github.com/trevorblades/apollo-server
-  branch: tb/experimental-docs
+  remote: https://github.com/apollographql/apollo-server
+  branch: main
 apollo-server/v2: 
-  remote: https://github.com/trevorblades/apollo-server
-  branch: tb/experimental-v2
+  remote: https://github.com/apollographql/apollo-server
+  branch: version-2
 ios: 
-  remote: https://github.com/trevorblades/apollo-ios
-  branch: tb/experimental-docs
+  remote: https://github.com/apollographql/apollo-ios
+  branch: main
 ios/v1:
-  remote: https://github.com/trevorblades/apollo-ios
-  branch: tb/experimental-v1
+  remote: https://github.com/apollographql/apollo-ios
+  branch: release/1.0
 kotlin: 
-  remote: https://github.com/trevorblades/apollo-kotlin
-  branch: tb/experimental-docs
+  remote: https://github.com/apollographql/apollo-kotlin
+  branch: main
 kotlin/v2: 
-  remote: https://github.com/trevorblades/apollo-kotlin
-  branch: tb/experimental-v2
+  remote: https://github.com/apollographql/apollo-kotlin
+  branch: release-2.x
 federation: 
-  remote: https://github.com/trevorblades/federation
-  branch: tb/experimental-v1
+  remote: https://github.com/apollographql/federation
+  branch: version-0.x
 federation/v2: 
-  remote: https://github.com/trevorblades/federation
-  branch: tb/experimental-docs
+  remote: https://github.com/apollographql/federation
+  branch: main
 rover: 
-  remote: https://github.com/trevorblades/rover
-  branch: tb/experimental-docs
+  remote: https://github.com/apollographql/rover
+  branch: main
 router: 
-  remote: https://github.com/trevorblades/router
-  branch: tb/experimental-docs
+  remote: https://github.com/apollographql/router
+  branch: main
