Prefix paths in prod

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,5 @@
   autoLaunch = false
 [context.dev.environment]
   # DOCS_PATH = "../apollo-server/docs/source"
+[context.production.environment]
+  PREFIX_PATHS = "true"
