--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,5 @@
 [dev]
+  command = "gatsby develop"
   autoLaunch = false
 [context.dev.environment]
   # DOCS_PATH = "../apollo-server/docs/source"
