Update DOCS_PATH in preview workflow

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Build
         run: npx netlify build --context=deploy-preview
         env:
-          DOCS_PATH: content/docs
+          DOCS_PATH: content/docs/source
 
       - name: Publish
         id: publish
