--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start:router": "npm start -- ../router",
     "build": "gatsby build",
     "prebuild": "npm run prepare --workspaces",
-    "test": "jest"
+    "test": "jest",
+    "changeset-publish": "changeset publish"
   },
   "workspaces": [
     "./packages/*"
@@ -90,6 +91,8 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@changesets/changelog-github": "^0.4.3",
+    "@changesets/cli": "^2.21.1",
     "@trevorblades/eslint-config": "^7.2.7",
     "cpx": "^1.5.0",
     "eslint": "^7.32.0",
