--- a/packages/chakra-helpers/tsconfig.json
+++ b/packages/chakra-helpers/tsconfig.json
@@ -1,15 +1,20 @@
 {
   "compilerOptions": {
     "jsx": "react",
+    "module": "commonjs",
     "lib": [
       "dom",
       "es2015"
     ],
     "esModuleInterop": true,
     "declaration": true,
-    "outDir": "lib"
+    "outDir": "lib",
   },
-  "files": [
-    "src/index.ts"
-  ]
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "node_modules",
+    "**/__tests__/*"
+  ],
 }
