--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@emotion/styled": "^11.3.0",
     "@fec/remark-a11y-emoji": "^3.1.0",
     "@jlengstorf/get-share-image": "^0.8.0",
+    "@loadable/component": "^5.15.2",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@svgr/webpack": "^5.5.0",
@@ -44,6 +45,7 @@
     "gatsby-plugin-env-variables": "^2.2.0",
     "gatsby-plugin-google-gtag": "^4.3.0",
     "gatsby-plugin-google-tagmanager": "^4.3.0",
+    "gatsby-plugin-loadable-components-ssr": "^4.2.0",
     "gatsby-plugin-manifest": "^4.3.0",
     "gatsby-plugin-mdx": "^2.14.0",
     "gatsby-plugin-next-seo": "^1.9.0",
