--- a/packages/chakra-helpers/package.json
+++ b/packages/chakra-helpers/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@apollo/space-kit": "8.11.0",
     "@chakra-ui/react": "^1.6.10",
+    "@types/gtag.js": "^0.0.10",
     "typescript": "^4.4.4"
   },
   "dependencies": {
