--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "mdx-embed": "^0.0.23",
     "path-browserify": "^1.0.1",
     "polished": "^4.1.4",
+    "prismjs": "^1.27.0",
     "prop-types": "^15.7.2",
     "puppeteer": "^10.4.0",
     "react": "^17.0.2",
