--- a/packages/chakra-helpers/package.json
+++ b/packages/chakra-helpers/package.json
@@ -26,6 +26,8 @@
     "@chakra-ui/react": "^1.6.10",
     "@react-icons/all-files": "^4.1.0",
     "@types/gtag.js": "^0.0.10",
+    "@types/prismjs": "^1.26.0",
+    "prismjs": "^1.27.0",
     "typescript": "^4.4.4"
   },
   "dependencies": {
@@ -34,8 +36,7 @@
     "outdent": "^0.8.0",
     "parse-numeric-range": "^1.3.0",
     "polished": "^4.1.3",
-    "prism-react-renderer": "^1.3.1",
-    "prismjs": "^1.27.0"
+    "prism-react-renderer": "^1.3.1"
   },
   "peerDependencies": {
     "@apollo/space-kit": "8 - 8.11.0",
