--- a/src/content/basics/config.json
+++ b/src/content/basics/config.json
@@ -5,11 +5,11 @@
     "The Apollo platform": "/intro/platform",
     "Why adopt GraphQL?": "/intro/benefits",
     "Tutorials": {
-      "Lift-off series & certification": "https://www.apollographql.com/tutorials/lift-off-part1/?utm_source=apollo_docs&utm_medium=referral&utm_campaign=docs_sidebar",
-      "Full-stack quickstart": "https://www.apollographql.com/tutorials/fullstack-quickstart/introduction?utm_source=apollo_docs&utm_medium=referral&utm_campaign=docs_sidebar"
+      "Lift-off series & certification": "https://www.apollographql.com/tutorials/lift-off-part1/",
+      "Full-stack quickstart": "https://www.apollographql.com/tutorials/fullstack-quickstart/introduction"
     },
     "Development Tools": {
-      "Rover CLI": "https://www.apollographql.com/docs/rover",
+      "Rover CLI": "/rover/",
       "Apollo extension for VS Code": "/devtools/editor-plugins",
       "Configuring Apollo projects": "/devtools/apollo-config",
       "The Apollo CLI (partially deprecated)": "/devtools/cli"
