--- a/src/content/basics/config.json
+++ b/src/content/basics/config.json
@@ -1,5 +1,5 @@
 {
-  "title": "Apollo Basics",
+  "title": "Docs Home",
   "sidebar": {
     "Home": "/",
     "The Apollo platform": "/intro/platform",
