--- a/sources/local.yml
+++ b/sources/local.yml
@@ -3,3 +3,4 @@
 # https://github.com/gatsbyjs/gatsby/issues/5510
 /: src/content/basics
 studio: src/content/studio
+technotes: src/content/technotes
