Update home page text

--- a/src/content/technotes/config.json
+++ b/src/content/technotes/config.json
@@ -4,7 +4,7 @@
     "docset:technotes"
   ],
   "sidebar": {
-    "Example": "/",
+    "Home": "/",
     "Server": {
       "Client ID Enforcement": "/server-side/client-id-enforcement"
     }
