--- a/src/content/technotes/config.json
+++ b/src/content/technotes/config.json
@@ -5,8 +5,6 @@
   ],
   "sidebar": {
     "Home": "/",
-    "Server": {
-      "Client ID Enforcement": "/server-side/client-id-enforcement"
-    }
+    "TN0001 - Client ID Enforcement": "TN0001-client-id-enforcement"
   }
 }
