adding TN0002 + minor edits to config

--- a/src/content/basics/config.json
+++ b/src/content/basics/config.json
@@ -19,7 +19,8 @@
       "Glossary": "/resources/graphql-glossary",
       "GraphQL FAQ": "/resources/faq",
       "Elastic License v2 FAQ": "/resources/elastic-license-v2-faq",
-      "Release lifecycle": "/resources/release-stages"
+      "Release lifecycle": "/resources/release-stages",
+      "Tech Notes": "/technotes/"
     },
     "Enterprise Guide": {
       "Introduction": "/enterprise-guide/introduction",
