--- a/src/content/technotes/config.json
+++ b/src/content/technotes/config.json
@@ -5,6 +5,7 @@
   ],
   "sidebar": {
     "Home": "/",
-    "TN0001 - Client ID Enforcement": "TN0001-client-id-enforcement"
+    "TN0001 - Client ID Enforcement": "TN0001-client-id-enforcement",
+    "TN0002 - Connecting OpenTelemetry Traces to Prometheus": "TN0002-opentelemetry-traces-to-prometheus"
   }
 }
