--- a/src/content/technotes/config.json
+++ b/src/content/technotes/config.json
@@ -1,10 +1,9 @@
 {
   "title": "Tech Notes",
-  "algoliaFilters": [
-    "docset:technotes"
-  ],
+  "algoliaFilters": ["docset:technotes"],
   "sidebar": {
     "Home": "/",
-    "TN0001 - Client ID Enforcement": "/TN0001-client-id-enforcement"
+    "TN0001 - Client ID Enforcement": "/TN0001-client-id-enforcement",
+    "TN0002 - Schema Naming Conventions": "/TN0002-schema-naming-conventions"
   }
 }
