--- a/src/content/basics/config.json
+++ b/src/content/basics/config.json
@@ -19,8 +19,7 @@
       "Glossary": "/resources/graphql-glossary",
       "GraphQL FAQ": "/resources/faq",
       "Elastic License v2 FAQ": "/resources/elastic-license-v2-faq",
-      "Release lifecycle": "/resources/release-stages",
-      "Tech Notes": "/technotes/"
+      "Release lifecycle": "/resources/release-stages"
     },
     "Enterprise Guide": {
       "Introduction": "/enterprise-guide/introduction",
