--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "@loadable/component": "^5.15.2",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "@react-icons/all-files": "^4.1.0",
     "@mpth/react-no-ssr": "^1.0.1",
+    "@react-icons/all-files": "^4.1.0",
     "@svgr/webpack": "^5.5.0",
     "@theowenyoung/gatsby-source-git": "^2.3.1",
     "airtable": "^0.11.2",
@@ -66,12 +66,12 @@
     "gatsby-transformer-remark": "^5.4.0",
     "github-slugger": "^1.4.0",
     "graphql": "^15.8.0",
+    "graphql-ws": "^5.8.2",
     "https-browserify": "^1.0.0",
     "interweave": "^12.9.0",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "mdast-util-from-markdown": "^0.8.5",
-    "mdx-embed": "^0.0.23",
     "path-browserify": "^1.0.1",
     "polished": "^4.1.4",
     "prismjs": "^1.27.0",
@@ -82,6 +82,7 @@
     "react-helmet-async": "^1.2.1",
     "react-icons": "^4.3.1",
     "react-markdown": "^8.0.0",
+    "react-player": "^2.10.1",
     "react-use": "^17.3.2",
     "rehype": "^12.0.0",
     "rehype-autolink-headings": "^5.1.0",
@@ -105,7 +106,6 @@
     "netlify-cli": "^9.13.3"
   },
   "volta": {
-    "node": "16.13.1",
-    "npm": "8.3.0"
+    "node": "16.15.1"
   }
 }
