--- a/src/content/technotes/config.json
+++ b/src/content/technotes/config.json
@@ -3,8 +3,10 @@
   "algoliaFilters": ["docset:technotes"],
   "sidebar": {
     "Home": "/",
-    "TN0001 - Client ID Enforcement": "/TN0001-client-id-enforcement",
-    "TN0002 - Schema Naming Conventions": "/TN0002-schema-naming-conventions",
-    "TN0003 - Connecting OpenTelemetry Traces to Prometheus": "TN0003-opentelemetry-traces-to-prometheus"
+    "Tags": {
+      "Observability": "/tags/observability",
+      "Schema design": "/tags/schema-design",
+      "Server": "/tags/server"
+    }
   }
 }
