--- a/src/content/basics/config.json
+++ b/src/content/basics/config.json
@@ -2,7 +2,7 @@
   "title": "Docs Home",
   "sidebar": {
     "Home": "/",
-    "The Apollo platform": "/intro/platform",
+    "What is Apollo?": "/intro/platform",
     "Why adopt GraphQL?": "/intro/benefits",
     "Tutorials": {
       "Lift-off series & certification": "https://www.apollographql.com/tutorials/lift-off-part1/",
