Disable cache persistence

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,7 @@
   port = 3000
 [build.environment]
   API_URL = "https://graphql-staging.api.apollographql.com"
+  GATSBY_DISABLE_CACHE_PERSISTENCE = "true"
 [context.production.environment]
   API_URL = "https://graphql.api.apollographql.com"
   PREFIX_PATHS = "true"
