--- a/src/content/technotes/config.json
+++ b/src/content/technotes/config.json
@@ -6,6 +6,6 @@
     "TN0001 - Client ID enforcement": "/TN0001-client-id-enforcement",
     "TN0002 - Schema naming conventions": "/TN0002-schema-naming-conventions",
     "TN0003 - Connecting OpenTelemetry traces to Prometheus": "/TN0003-opentelemetry-traces-to-prometheus",
-    "TN0005 - Overload Protection": "/TN0005-overload-protection"
+    "TN0005 - Overload protection": "/TN0005-overload-protection"
   }
 }
