--- a/src/content/technotes/config.json
+++ b/src/content/technotes/config.json
@@ -8,7 +8,8 @@
       "observability": "/tags/observability",
       "router": "/tags/router",
       "schema design": "/tags/schema-design",
-      "server": "/tags/server"
+      "server": "/tags/server",
+      "SRE": "/tags/sre"
     }
   }
 }
