--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start:local": "DOCS_MODE=local npm start",
     "start:client": "npm start -- ../apollo-client",
     "start:customer-success": "npm start -- ../customer-success",
+    "start:platform-users": "npm start -- ../platform-users-docs",
     "start:server": "npm start -- ../apollo-server",
     "start:ios": "npm start -- ../apollo-ios",
     "start:kotlin": "npm start -- ../apollo-kotlin",
