[technotes]: TN0010 add response cache eviction solution

--- a/src/content/technotes/config.json
+++ b/src/content/technotes/config.json
@@ -9,7 +9,9 @@
       "router": "/tags/router",
       "schema design": "/tags/schema-design",
       "server": "/tags/server",
-      "testing": "/tags/testing"
+      "testing": "/tags/testing",
+      "caching": "/tags/caching",
+      "performance": "/tags/performance"
     }
   }
 }
