Revert "[technotes]: TN0010 add response cache eviction solution"
This reverts commit 404aae3e068229bdb38063b2fe4de0283bd7f643.

--- a/src/content/technotes/config.json
+++ b/src/content/technotes/config.json
@@ -9,9 +9,7 @@
       "router": "/tags/router",
       "schema design": "/tags/schema-design",
       "server": "/tags/server",
-      "testing": "/tags/testing",
-      "caching": "/tags/caching",
-      "performance": "/tags/performance"
+      "testing": "/tags/testing"
     }
   }
 }
