[TN0011] add response cache eviction solution (#176)
Add Technote for a cache eviction solution for Apollo Server's full response cache plugin

Co-authored-by: Kyle Schrade <16599960+kschrade@users.noreply.github.com>
Co-authored-by: Lucas Leadbetter <5595530+lleadbet@users.noreply.github.com>
Co-authored-by: Stephen Barlow <barlow.stephen+git@gmail.com>

--- a/src/content/technotes/config.json
+++ b/src/content/technotes/config.json
@@ -12,7 +12,8 @@
       "schema design": "/tags/schema-design",
       "server": "/tags/server",
       "testing": "/tags/testing",
-      "best practices": "/tags/best-practices"
+      "best practices": "/tags/best-practices",
+      "caching": "/tags/caching"
     }
   }
 }
