--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@apollo/space-kit": "8.11.0",
     "@chakra-ui/gatsby-plugin": "^2.0.3",
     "@chakra-ui/react": "^1.8.3",
+    "@colliercz/gatsby-transformer-gitinfo": "^1.3.0",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@fec/remark-a11y-emoji": "^3.1.0",
