adding contracts usage pattens technote

--- a/src/content/technotes/config.json
+++ b/src/content/technotes/config.json
@@ -13,7 +13,9 @@
       "server": "/tags/server",
       "testing": "/tags/testing",
       "best practices": "/tags/best-practices",
-      "caching": "/tags/caching"
+      "caching": "/tags/caching",
+      "contracts": "/tags/contracts",
+      "sre": "/tags/sre"
     }
   }
 }
