Update config and redirects

--- a/src/content/basics/config.json
+++ b/src/content/basics/config.json
@@ -28,7 +28,7 @@
       "Glossary": "/resources/graphql-glossary",
       "GraphQL FAQ": "/resources/faq",
       "Elastic License v2 FAQ": "/resources/elastic-license-v2-faq",
-      "Release lifecycle": "/resources/release-stages"
+      "Product launch stages": "/resources/product-launch-stages"
     },
     "Enterprise Guide": {
       "Introduction": "/enterprise-guide/introduction",
